grammar.js
    module: ($) => repeat($._statement),

    // MOJO: Modifiers
    comptime_modifier: ($) => "comptime",

    // ====================
    // Statements
    // ====================

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    // Simple statements (one per line or separated by semicolons)
    function_definition: ($) =>
      seq(
        optional("async"),
        field("keyword", "def"),
        field("name", $.identifier),
        optional(field("meta_parameters", $.meta_parameters)), // NEW: meta params
        field("parameters", $.parameters),
        optional(
          choice(
            seq(
              optional(seq("->", field("return_type", $.type))),
              repeat(field("modifiers", $.function_modifier)),
              optional(field("captures", $.capture_list)),
            ),
            seq(
              repeat1(field("modifiers", $.function_modifier)),
              optional(field("captures", $.capture_list)),
              optional(seq("->", field("return_type", $.type))),
            ),
            seq(
              repeat1(field("modifiers", $.function_modifier)),
              optional(seq("->", field("return_type", $.type))),
              optional(field("captures", $.capture_list)),
            ),
            seq(
              field("captures", $.capture_list),
              optional(seq("->", field("return_type", $.type))),
            ),
          ),
        ),
        optional(field("where_clause", $.where_clause)),
        ":",
        field("body", $._suite),
      ),

    where_clause: ($) =>
      repeat1(seq("where", field("constraint", $.expression))),

    // NEW: Meta parameters for compile-time generics [T: Type, N: Int]
    meta_parameters: ($) =>
      seq(
        "[",
        optional(
          seq(
            commaSep1(
              choice(
                $.meta_parameter,
                $.keyword_separator,
                $.positional_separator,
                $.infer_separator,
              ),
            ),
            optional(","),
          ),
        ),
        "]",
      ),

    meta_parameter: ($) =>
      seq(
        field(
          "name",
          choice(
            $.identifier,
            $.soft_keyword_identifier,
            $.list_splat_pattern,
            $.dictionary_splat_pattern,
          ),
        ),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("default", $.expression))),
      ),

    // Function effects supported by recent Mojo releases plus legacy capturing.
    parameters: ($) => seq("(", optional($._parameters), ")"),

    _parameters: ($) => seq(commaSep1($.parameter), optional(",")),

    // NEW: Parameter with optional argument convention
    typed_parameter: ($) =>
      prec(
        PREC.typed_parameter + 10,
        seq(
          optional(field("convention", $.argument_convention)), // NEW: mut, var, etc.
          field(
            "name",
            choice(
              $.identifier,
              $.soft_keyword_identifier,
              $.list_splat_pattern,
              $.dictionary_splat_pattern,
            ),
          ),
          ":",
          field("type", $.type),
        ),
      ),

    // NEW: Parameter with convention but no type (e.g., 'out self')
    trait_definition: ($) =>
      seq(
        field("keyword", "trait"),
        field("name", $.identifier),
        optional(field("meta_parameters", $.meta_parameters)),
        optional(field("superclasses", $.struct_superclasses)),
        optional(field("where_clause", $.where_clause)),
        ":",
        field("body", $._trait_suite),
      ),

    comptime_declaration: ($) =>
      choice(
        seq(
          "comptime",
          field("name", choice($.identifier, $.soft_keyword_identifier)),
          field("meta_parameters", $.meta_parameters),
          choice(
            seq(
              ":",
              field("type", $.type),
              optional(field("where_clause", $.where_clause)),
              seq("=", field("value", $.expression)),
            ),
            seq(
              optional(field("where_clause", $.where_clause)),
              "=",
              field("value", $.expression),
            ),
          ),
        ),
        seq(
          "comptime",
          field("left", $._left_hand_side),
          choice(
            seq(
              optional(field("where_clause", $.where_clause)),
              "=",
              field("right", $._right_hand_side),
            ),
            seq(
              ":",
              field("type", $.type),
              optional(field("where_clause", $.where_clause)),
            ),
            seq(
              ":",
              field("type", $.type),
              optional(field("where_clause", $.where_clause)),
              "=",
              field("right", $._right_hand_side),
            ),
          ),
        ),
      ),

    comptime_member_declaration: ($) =>
      seq(
        "comptime",
        field("name", choice($.identifier, $.soft_keyword_identifier)),
        optional(field("meta_parameters", $.meta_parameters)),
        choice(
          seq(
            ":",
            field("type", $.type),
            optional(field("where_clause", $.where_clause)),
            optional(seq("=", field("value", $.expression))),
          ),
          seq(
            optional(field("where_clause", $.where_clause)),
            "=",
            field("value", $.expression),
          ),
        ),
      ),

    // ====================
    // Other Compound Statements (simplified)
    // ====================

    decorated_definition: ($) =>
      seq(
        repeat1($.decorator),
        field(
          "definition",
          choice(
            $.struct_definition,
            $.trait_definition,
            $.function_definition,
            $.if_statement,
            $.for_statement,
            $.comptime_declaration,
            $.comptime_member_declaration,
            $.extension_definition,
            $.assignment,
          ),
        ),
      ),

    decorator: ($) => seq("@", $.expression, $._newline),

    if_statement: ($) =>
      seq(
        optional($.comptime_modifier),
        "if",
        field("condition", $.expression),
        ":",
        field("consequence", $._suite),
        repeat(field("alternative", $.elif_clause)),
        optional(field("alternative", $.else_clause)),
      ),

    else_clause: ($) => seq("else", ":", field("body", $._suite)),

    for_statement: ($) =>
      seq(
        optional($.comptime_modifier),
        "for",
        field("left", $._left_hand_side),
        "in",
        field("right", $._expressions),
        ":",
        field("body", $._suite),
        optional(field("alternative", $.else_clause)),
      ),

    with_statement: ($) =>
      seq(
        optional("async"),
        optional($.comptime_modifier),
        "with",
        commaSep1($.with_item),
        ":",
        field("body", $._suite),
      ),

    mlir_region_statement: ($) =>
      seq(
        "__mlir_region",
        field("name", choice($.identifier, $.soft_keyword_identifier)),
        field("parameters", optional($.parameters)),
        ":",
        field("body", $._suite),
      ),

    with_item: ($) =>
      prec.dynamic(
        1,
        seq(
          field("value", $.expression),
          optional(seq("as", field("alias", $.pattern))),
        ),
      ),

    // ====================
    // Simple Statements (basic implementations)
    // ====================

    comptime_assert_statement: ($) =>
      seq(
        choice(seq("comptime", "assert"), "__comptime_assert"),
        commaSep1($.expression),
      ),

    expression_statement: ($) =>
      choice(
        $.expression,
        seq(commaSep1($.expression), optional(",")),
        $.assignment,
        $.augmented_assignment,
      ),

    return_statement: ($) => seq("return", optional($._expressions)),

    _expressions: ($) => choice($.expression, $.expression_list),

    pass_statement: (_) => "pass",
    binary_operator: ($) => {
      /** @type {Array<[any, number, string]>} */
      const table = [
        [prec.left, PREC.plus, "+"],
        [prec.left, PREC.plus, "-"],
        [prec.left, PREC.times, "*"],
        [prec.left, PREC.times, "@"],
        [prec.left, PREC.times, "/"],
        [prec.left, PREC.times, "%"],
        [prec.left, PREC.times, "//"],
        [prec.right, PREC.power, "**"],
        [prec.left, PREC.bitwise_or, "|"],
        [prec.left, PREC.bitwise_and, "&"],
        [prec.left, PREC.xor, "^"],
        [prec.left, PREC.shift, "<<"],
        [prec.left, PREC.shift, ">>"],
      ];

      return choice(
        ...table.map(([fn, precedence, operator]) =>
          fn(
            precedence,
            seq(
              field("left", $.primary_expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $.primary_expression),
            ),
          ),
        ),
      );
    },

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              field(
                "operators",
                choice(
                  "<",
                  "<=",
                  "==",
                  "!=",
                  ">=",
                  ">",
                  "<>",
                  "in",
                  alias(seq("not", "in"), "not in"),
                  "is",
                  alias(seq("is", "not"), "is not"),
                ),
              ),
              $.primary_expression,
            ),
          ),
        ),
      ),

    assignment: ($) =>
      seq(
        field("left", $._left_hand_side),
        choice(
          seq("=", field("right", $._right_hand_side)),
          seq(":", field("type", $.type)),
          seq(
            ":",
            field("type", $.type),
            "=",
            field("right", $._right_hand_side),
          ),
        ),
      ),

    _left_hand_side: ($) => choice($.pattern, $.pattern_list),

    _right_hand_side: ($) =>
      choice(
        $.expression,
        $.expression_list,
        $.assignment,
        $.augmented_assignment,
        $.pattern_list,
      ),

    attribute: ($) =>
      prec(
        PREC.call,
        seq(
          field("object", $.primary_expression),
          ".",
          field("attribute", choice($.identifier, $.string)),
        ),
      ),

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", $.primary_expression),
          field("arguments", choice($.generator_expression, $.argument_list)),
        ),
      ),

    type: ($) =>
      choice(
        $.function_type,
        // Type with argument convention (e.g., ref[origin] Type)
        seq(field("convention", $.argument_convention), $.expression),
        // Variadic splat type (e.g., *Ts)
        $.list_splat,
        // Regular type expression
        $.expression,
      ),

    var_pattern: ($) => prec(25, seq("var", field("pattern", $.pattern))),

    string: ($) =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $._string_content, $.escape_sequence)),
        $.string_end,
      ),

    integer: (_) =>
      token(
        choice(
          seq(
            choice("0x", "0X"),
            /[A-Fa-f0-9]+(_+[A-Fa-f0-9]+)*/,
            optional(/[Ll]/),
          ),
          seq(choice("0o", "0O"), /[0-7]+(_+[0-7]+)*/, optional(/[Ll]/)),
          seq(choice("0b", "0B"), /[0-1]+(_+[0-1]+)*/, optional(/[Ll]/)),
          seq(
            /[0-9]+(_+[0-9]+)*/,
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/), // complex numbers
            ),
          ),
        ),
      ),

    float: (_) => {
      const digits = /[0-9]+(_+[0-9]+)*/;
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent),
          ),
          optional(choice(/[Ll]/, /[jJ]/)),
        ),
      );
    },

    identifier: (_) =>
      token(choice(/[_\p{XID_Start}][\p{XID_Continue}]*/u, /`[^`\r\n]+`/)),

    true: (_) => "True",
    await: ($) => prec(PREC.unary, seq("await", $.primary_expression)),

    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, repeat($._statement), $._dedent),
        alias($._newline, $.block),
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional(
          commaSep1(
            choice(
              $.expression,
              $.list_splat,
              $.dictionary_splat,
              alias($.parenthesized_list_splat, $.parenthesized_expression),
              $.keyword_argument,
            ),
          ),
        ),
        optional(","),
        ")",
      ),

    _trait_suite: ($) =>
      choice(
        alias($._trait_simple_statements, $.block),
        seq($._indent, repeat($._trait_statement), $._dedent),
        alias($._newline, $.block),
      ),
