test/corpus/comptime.txt
================================================================================
Comptime For
================================================================================

def foo():
    comptime for i in range(10):
        pass

--------------------------------------------------------------------------------

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (for_statement
      (comptime_modifier)
      left: (identifier)
      right: (call
        function: (identifier)
        arguments: (argument_list
          (integer)))
      body: (pass_statement))))

================================================================================
Comptime If
================================================================================

comptime if True:
    pass

--------------------------------------------------------------------------------

(module
  (if_statement
    (comptime_modifier)
    condition: (true)
    consequence: (pass_statement)))

================================================================================
Comptime With
================================================================================

comptime with open("foo") as f:
    pass

--------------------------------------------------------------------------------

(module
  (with_statement
    (comptime_modifier)
    (with_item
      value: (call
        function: (identifier)
        arguments: (argument_list
          (string
            (string_start)
            (string_end))))
      alias: (identifier))
    body: (pass_statement)))

================================================================================
Comptime Assert
================================================================================

comptime assert Self.size > 1, "size must be at least 2"
__comptime_assert cond

--------------------------------------------------------------------------------

(module
  (comptime_assert_statement
    (comparison_operator
      (attribute
        object: (identifier)
        attribute: (identifier))
      (integer))
    (string
      (string_start)
      (string_end)))
  (comptime_assert_statement
    (identifier)))

================================================================================
Comptime alias declaration with trailing where clause
================================================================================

comptime PositiveOnly[N: Int]: AnyType where N > 0 = Int
comptime SimpleAlias: AnyType where True = Float

--------------------------------------------------------------------------------

(module
  (comptime_declaration
    name: (identifier)
    meta_parameters: (meta_parameters
      (meta_parameter
        name: (identifier)
        type: (type
          (identifier))))
    type: (type
      (identifier))
    where_clause: (where_clause
      constraint: (comparison_operator
        (identifier)
        (integer)))
    value: (identifier))
  (comptime_declaration
    left: (identifier)
    type: (type
      (identifier))
    where_clause: (where_clause
      constraint: (true))
    right: (identifier)))

================================================================================
Comptime member declaration with trailing where clause
================================================================================

trait HasCondStaticValue:
    comptime STATIC_VALUE: Int where True

--------------------------------------------------------------------------------

(module
  (trait_definition
    name: (identifier)
    body: (comptime_member_declaration
      name: (identifier)
      type: (type
        (identifier))
      where_clause: (where_clause
        constraint: (true)))))

================================================================================
Compiler-accepted b2 comptime declarations and control flow
================================================================================

comptime WIDTH = 4
comptime Scalar = Int

def specialize():
    comptime if WIDTH > 0:
        comptime for i in range(WIDTH):
            pass

--------------------------------------------------------------------------------

(module
  (comptime_declaration
    left: (identifier)
    right: (integer))
  (comptime_declaration
    left: (identifier)
    right: (identifier))
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (if_statement
      (comptime_modifier)
      condition: (comparison_operator
        (identifier)
        (integer))
      consequence: (for_statement
        (comptime_modifier)
        left: (identifier)
        right: (call
          function: (identifier)
          arguments: (argument_list
            (identifier)))
        body: (pass_statement)))))

================================================================================
Compiler-accepted deprecated alias declaration
================================================================================

alias LegacyInt = Int

--------------------------------------------------------------------------------

(module
  (comptime_declaration
    left: (identifier)
    right: (identifier)))
